# fornax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  changelog.md  cliff.toml  lefthook.yaml  pixi.toml  renovate.json  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  libraw-bindgen.yml  post-release.yml  release.yml  update-dependency.yml
.zed/: settings.json
crates/dcraw/: Cargo.toml
crates/dcraw/src/: lib.rs  output_params.rs  processed_image.rs
crates/dnc/: Cargo.toml
crates/dnc/examples/: dnc.rs
crates/dnc/src/: error.rs  lib.rs  params.rs  wrapper.rs
crates/dnc/tests/: test-dnc.rs
crates/dng-converter/: Cargo.toml
crates/dng-converter/src/: lib.rs  params.rs
crates/fornax/: Cargo.toml
crates/fornax-cli/: Cargo.toml
crates/fornax-cli/src/: main.rs
crates/fornax-core/: Cargo.toml
crates/fornax-core/src/: bayer.rs  decoder.rs  error.rs  lib.rs  post_processor.rs  primitive.rs  processed_image.rs
crates/fornax-dalim/: Cargo.toml
crates/fornax-dalim/src/: demosaic.rs  lib.rs
crates/fornax-dalim/src/demosaic/: linear.rs
crates/fornax-devtool/: Cargo.toml
crates/fornax-devtool/src/: lib.rs
crates/fornax-preset/: Cargo.toml
crates/fornax-preset/src/: lib.rs
crates/fornax-py/: Cargo.toml  pyproject.toml
crates/fornax-py/fornax/: __init__.pyi  _base.py  _dcraw.py  _fornax.py  _tracing.py  decoder.py  dnc.py  helper.py  post_processor.py
crates/fornax-py/rattler/: build-fornax-py.ps1  ci-fornax-py.ps1  recipe.yaml
crates/fornax-py/src/: lib.rs
crates/fornax-py/tests/: test_fornax.py
crates/fornax-traits/: Cargo.toml
crates/fornax-traits/src/: lib.rs
crates/fornax/examples/: dalim-demosaic.rs  dnc.rs  dng-converter.rs  fornax_libraw_dalim.rs  fornax_libraw_libraw.rs  imgother.rs  iparams.rs  libraw-bayerimage.rs  libraw-imgother.rs  libraw-iparams.rs  libraw-process-cg.rs  libraw-process.rs  libraw-raw2image.rs  libraw-rawdata.rs  libraw-rawimage.rs  libraw-sizes.rs  libraw_dalim.rs  libraw_libraw.rs  process-cg.rs  process.rs  sizes.rs
crates/fornax/examples/utils/: mod.rs
crates/fornax/src/: data_structure.rs  error.rs  errors.rs  image_sizes.rs  imgother.rs  iparams.rs  lib.rs  output_params.rs  params.rs  presets.rs  processed_image.rs  processor.rs  raw_image.rs  utils.rs
crates/fornax/src/data_structure/: constants.rs  image_sizes.rs  libraw_data.rs  libraw_errors.rs  libraw_image_sizes.rs  libraw_output_params.rs  libraw_processed_image.rs  output_params.rs
crates/fornax/tests/: test-dalim-demosaic.rs  test-dnc.rs  test-libraw-dalim.rs  test-libraw-imgother.rs  test-libraw-iparams.rs  test-libraw-libraw-cg.rs  test-libraw-libraw.rs  test-libraw-process-cg.rs  test-libraw-rawimagers  test-libraw-sizes.rs  test_examples.rs  test_libraw_dalim.rs  test_libraw_libraw.rs
crates/libraw/: Cargo.toml
crates/libraw-py/libraw/: __init__.pyi
crates/libraw-sys/: Cargo.toml  build.rs
crates/libraw-sys/src/: bindings-linux-aarch64.rs  bindings-linux.rs  bindings-macos.rs  bindings-win.rs  bindings.rs  lib.rs
crates/libraw-sys/vcpkg/: vcpkg-install.ps1  vcpkg.json
crates/libraw/examples/: bayer_image.rs  bayerimage.rs  image_sizes.rs  imgother.rs  iparams.rs  libraw-bayerimage.rs  libraw-iparams.rs  libraw_bayer_image.rs  libraw_image_sizes.rs  libraw_imgother.rs  libraw_iparams.rs  libraw_raw_image.rs  libraw_rawdata.rs  raw2image.rs  raw_image.rs  rawdata.rs  sizes.rs
crates/libraw/src/: c_api.rs  data_structure.rs  dcraw.rs  error.rs  errors.rs  extension.rs  imgother.rs  iparams.rs  lib.rs  libraw.rs  output_params.rs  processed_image.rs  processor.rs  rawimage.rs  utils.rs  version.rs
crates/libraw/src/c_api/: auxiliary.rs  data_loading.rs  init.rs  params.rs  writing_buffer.rs  writing_files.rs
crates/libraw/src/data_structure/: constants.rs  data.rs  image_sizes.rs  imgother.rs  iparams.rs  output_params.rs  processed_image.rs  rawdata.rs
crates/libraw/src/data_structure/constants/: errors.rs
crates/libraw/src/dcraw/: output_params.rs  processed_image.rs
crates/libraw/src/extension/: dcraw.rs  error_handling.rs  fornax.rs  misc.rs  missing_structures.rs
crates/libraw/src/libraw/: image_sizes.rs  imgother.rs  iparams.rs  open_bayer_options.rs  rawdata.rs  version.rs
crates/libraw/tests/: test-libraw-bayerimage.rs  test-libraw-raw2image.rs  test-rawdata.rs  test_bayer_image.rs  test_examples.rs  test_image_sizes.rs  test_imgother.rs  test_iparams.rs  test_raw_image.rs  test_rawdata.rs
doc/: post-processor.md
examples/: imgother.rs  iparams.rs  process.rs  sizes.rs
lefthook/: pixi.toml
pre-commit/: pixi.toml
scripts/: build-python-whl.ps1  build.ps1  cargo-bench.ps1  cargo-clean.ps1  cargo-clippy.ps1  cargo-doc.ps1  cargo-fmt.ps1  cargo-test.ps1  examples-slow.ps1  examples.ps1  install-dnc.ps1  libraw-bindings.ps1  maturin-develop.ps1  numpydoc.ps1  pre-commit.ps1  pytest.ps1  setup.ps1  update-version.ps1
vcpkg/: vcpkg-install.ps1  vcpkg.json
