[workspace]
members = ["./crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.8"

[workspace.dependencies]
clerk = { git = "https://github.com/Glatzel/clerk", tag = "v0.0.30" }
envoy = { git = "https://github.com/Glatzel/toolbox", tag = "v0.0.30" }
mischief = { git = "https://github.com/Glatzel/toolbox", tag = "v0.0.30" }

dnc = { path = "./crates/dnc" }
fornax = { path = "./crates/fornax" }
fornax-core = { path = "./crates/fornax-core" }
fornax-dalim = { path = "./crates/fornax-dalim" }
fornax-devtool = { path = "./crates/fornax-devtool" }
libraw = { path = "./crates/libraw" }
libraw-sys = { path = "./crates/libraw-sys" }

assert_cmd = "2.0"
bindgen = "0.72.0"
bytemuck = "1.23.2"
chrono = "0.4.42"
dunce = "1.0.5"
# image = "0.25.5"
float-cmp = "0.10.0"
image = { git = "https://github.com/fintelia/image", branch = "primitive-ext" }
libc = "0.2"
num_enum = "0.7.4"
numpy = "0.26.0"
path-slash = "0.2.1"
pkg-config = "0.3.32"
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py311"] }
rayon = "1.11.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.224", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = true

[profile.develop]
inherits = "dev"
