[workspace]
resolver = "2"
members = ["./crates/*"]

[workspace.package]
version = "0.0.15"
edition = "2024"

[workspace.dependencies]
clerk = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.5.1" }
envoy = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.5.1" }
mischief = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.5.1" }

dnc = { path = "./crates/dnc" }
fornax = { path = "./crates/fornax" }
fornax-core = { path = "./crates/fornax-core" }
fornax-dalim = { path = "./crates/fornax-dalim" }
fornax-devtool = { path = "./crates/fornax-devtool" }
libraw = { path = "./crates/libraw" }
libraw-sys = { path = "./crates/libraw-sys" }

assert_cmd = "2.0"
bindgen = "0.72.0"
bytemuck = "1.23.2"
chrono = "0.4.42"
dunce = "1.0.5"
# image = "0.25.5"
float-cmp = "0.10.0"
image = { git = "https://github.com/fintelia/image", branch = "primitive-ext" }
libc = "0.2"
num_enum = "0.7.4"
numpy = "0.28.0"
path-slash = "0.2.1"
pyo3 = { version = "0.28.0", features = ["abi3-py313", "extension-module"] }
rayon = "1.11.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.224", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
