[workspace]
resolver = "2"
members = ["./crates/*"]

[workspace.package]
version = "0.0.17"
edition = "2024"

[workspace.dependencies]
clerk = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.5.29" }
envoy = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.5.29" }
mischief = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.5.29" }

bindgen = "0.72.1"
bytemuck = "1.25.0"
chrono = "0.4.45"
dnc = { path = "./crates/dnc" }
dunce = "1.0.5"
# image = "0.25.5"
float-cmp = "0.10.0"
fornax = { path = "./crates/fornax" }
fornax-core = { path = "./crates/fornax-core" }
fornax-dalim = { path = "./crates/fornax-dalim" }
fornax-devtool = { path = "./crates/fornax-devtool" }
image = { git = "https://github.com/fintelia/image", branch = "primitive-ext" }
libc = "0.2.186"
libraw = { path = "./crates/libraw" }
libraw-sys = { path = "./crates/libraw-sys" }
num_enum = "0.7.6"
numpy = "0.29.0"
path-slash = "0.2.1"
pyo3 = { version = "0.29.0", features = ["abi3-py313", "extension-module"] }
rayon = "1.12.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
