[package]
edition.workspace = true
name = "dcraw"
version.workspace = true

[dependencies]
bytemuck = { workspace = true }
clerk = { workspace = true }
fornax-core = { workspace = true }
image = { workspace = true }
libraw = { workspace = true }
libraw-sys = { workspace = true }
miette = { workspace = true }
serde = { workspace = true, optional = true }

[features]
log = ["clerk/log"]
serde = ["dep:serde"]
