[package]
edition.workspace = true
name = "dnc"
version.workspace = true

[dependencies]
clerk = { workspace = true }
dunce = { workspace = true }
miette = { workspace = true }
path-slash = { workspace = true }
serde = { workspace = true, optional = true }
bindgen = "0.71.1"

[dev-dependencies]
assert_cmd = { workspace = true }
clerk = { workspace = true, features = ["log"] }
fornax-devtool = { workspace = true }

[features]
log = ["clerk/log"]
serde = ["dep:serde"]
