[package]
edition.workspace = true
name = "dnc"
version.workspace = true

[dependencies]
clerk = { workspace = true }
dunce = { workspace = true }
thiserror = { workspace = true }
path-slash = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
clerk = { workspace = true, features = ["log"] }
fornax-devtool = { workspace = true }
mischief = { workspace = true }

[features]
serde = ["dep:serde"]
