[package]
edition.workspace = true
name = "fornax-dalim"
version.workspace = true

[dependencies]
clerk = { workspace = true }
fornax-core = { workspace = true }
image = { workspace = true }
miette = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
clerk = { workspace = true, features = ["log"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
log = ["clerk/log"]
serde = ["dep:serde"]
