[package]
edition.workspace = true
name = "fornax-dalim"
version.workspace = true

[dependencies]
clerk = { workspace = true }
fornax-core = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
clerk = { workspace = true, features = ["tracing"] }
mischief = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
serde = ["dep:serde"]
