[package]
edition.workspace = true
name = "fornax-py"
version.workspace = true

[dependencies]
clerk = { workspace = true, features = ["log"] }
fornax = { workspace = true, features = ["serde"] }
image = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
crate-type = ["cdylib"]
name = "fornax_py"
