[package]
name = "fornax-py"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
name = "fornax_py"

[dependencies]
clerk = { workspace = true, features = ["tracing"] }
fornax = { workspace = true, features = ["serde"] }
image = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
