[package]
edition.workspace = true
name = "fornax"
version.workspace = true

[dependencies]
dnc = { workspace = true }
fornax-core = { workspace = true }
fornax-dalim = { workspace = true }
libraw = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
clerk = { workspace = true, features = ["log"] }
dunce = { workspace = true }
path-slash = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
log = ["clerk/log"]
serde = ["libraw/serde", "dnc/serde"]
