[package]
edition.workspace = true
name = "fornax"
version.workspace = true

[dependencies]
dnc = { workspace = true }
fornax-core = { workspace = true }
fornax-dalim = { workspace = true }
image = { workspace = true }
libraw = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
clerk = { workspace = true, features = ["log"] }
fornax-devtool = { workspace = true }

[features]
serde = ["libraw/serde", "dnc/serde", "fornax-dalim/serde"]
