[package]
edition.workspace = true
name = "libraw-sys"
version.workspace = true

[build-dependencies]
bindgen = { workspace = true, optional = true }
clerk = { workspace = true, features = ["log"] }
pkg-config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
bindgen = ["dep:bindgen"]
update = []
