[package]
edition.workspace = true
name = "libraw-sys"
version.workspace = true

[dependencies]
libc = { workspace = true }

[build-dependencies]
bindgen = { workspace = true, optional = true }
pkg-config = { workspace = true }
dunce =  { workspace = true }
[features]
bindgen = ["dep:bindgen"]
update = []
