[package]
edition.workspace = true
name = "libraw"
version.workspace = true

[dependencies]
bytemuck = { workspace = true }
chrono = { workspace = true }
clerk = { workspace = true }
fornax-core = { workspace = true }
image = { workspace = true }
libraw-sys = { workspace = true }
miette = { workspace = true }
serde = { workspace = true, optional = true }
num =  { workspace = true }

[features]
log = ["clerk/log"]
serde = ["dep:serde", "chrono/serde"]
