[package]
edition.workspace = true
name = "libraw"
version.workspace = true

[dependencies]
bytemuck = { workspace = true }
chrono = { workspace = true }
clerk = { workspace = true }
fornax-core = { workspace = true }
image = { workspace = true }
libraw-sys = { workspace = true, features = ["bindgen"] }
miette = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
clerk = { workspace = true, features = ["log"] }
float-cmp = { workspace = true }
fornax-devtool = { workspace = true }

[features]
log = ["clerk/log"]
serde = ["dep:serde", "chrono/serde"]
