[package]
edition.workspace = true
name = "libraw"
version.workspace = true

[dependencies]
bytemuck = { workspace = true }
chrono = { workspace = true }
clerk = { workspace = true }
envoy = { workspace = true }
fornax-core = { workspace = true }
image = { workspace = true }
libraw-sys = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
clerk = { workspace = true, features = ["tracing"] }
float-cmp = { workspace = true }
fornax-devtool = { workspace = true }
mischief = { workspace = true }

[features]
serde = ["dep:serde", "chrono/serde"]
